--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.idea
-.idea/*.xml
-*.iml
-out
-gen
-build
-rebel.xml
+.idea/*
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
